packages/openbridge-webcomponents/src/components/start-stop-switch/start-stop-switch.css
* {
  box-sizing: border-box;
  user-select: none;
}

:host {
  display: block;
}

.outer-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: var(--ui-components-start-stop-switch-touch-target-size);
  justify-content: center;
}

.wrapper {
  position: relative;
  width: 100%;

  /* Focus styling on the wrapper when the button inside is focused */
  &:has(.button:focus-visible) {
    outline-width: var(--global-size-spacing-border-weight-focusframe, 2px);
    outline-color: var(--border-focus-color);
    outline-style: solid;
    outline-offset: 1px;
    border-radius: var(--ui-components-start-stop-switch-border-radius);

    .button-track-checked {
      border: none;
    }
  }
}

/* Size variants - button track heights */
.wrapper.size-regular .button-track {
  height: var(--ui-components-start-stop-switch-visual-target-size);
}

.wrapper.size-large .button-track {
  height: var(--ui-components-start-stop-switch-touch-target-size);
}

.button-track {
  position: relative;
  width: 100%;
  flex-shrink: 0;
  border-radius: var(--ui-components-start-stop-switch-border-radius);

  @mixin style style=indent noClick;


  & .button-track-checked {
    position-anchor: --thumb;
    box-sizing: border-box;
    position: absolute;
    left: -1px;
    right: anchor(center);
    top: -1px;
    bottom: -1px;
    border-radius: var(--ui-components-start-stop-switch-border-radius);
    @mixin style style=selected noClick;
  }
}

/* Value: motor-on (running) - green overlay */
.wrapper.value-motor-on .button-track .button-track-checked {
  background: var(--running-enabled-background-color);
  border-color: var(--running-enabled-border-color);
}

.wrapper.value-motor-on .state.checked {
  color: var(--on-running-active-color);
}

/* Value: loading (amplified) - light blue overlay */
.wrapper.value-loading .button-track .button-track-checked {
  background: var(--amplified-enabled-background-color);
  border-color: var(--amplified-enabled-border-color);
}

.wrapper.value-loading .state.checked {
  color: var(--on-amplified-neutral-color);
}

.state {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  position-anchor: --thumb;
  width: calc(100% - anchor-size(width));
  top: 0;
  bottom: 0;
}

.state-label {
  padding: 0px var(--ui-components-start-stop-switch-label-spacing);
  white-space: nowrap;
}

/* State icon slots */
.state ::slotted(*) {
  width: var(--ui-components-start-stop-switch-icon-size);
  height: var(--ui-components-start-stop-switch-icon-size);
}

.checked.state {
  left: 0;
  @mixin font-body-active;
  color: var(--on-selected-active-color);
}

.unchecked:not(.tmp-checked) .state.checked,
.tmp-unchecked .state.checked {
  display: none;
}

.checked:not(.tmp-unchecked) .state.unchecked,
.tmp-checked .state.unchecked {
  display: none;
}

.unchecked.state {
  right: 0;
  @mixin font-body;
  color: var(--on-indent-active-color);
}

.button {
  @mixin style style=thumb;
  @mixin font-button;
  z-index: 1;
  anchor-name: --thumb;
  height: calc(100% + 2px);
  position: absolute;
  display: flex;
  width: fit-content;
  justify-content: center;
  align-items: center;
  margin: -1px;

  min-width: var(--ui-components-start-stop-switch-touch-target-size);
  padding: 0px var(--ui-components-start-stop-switch-padding-horizontal);
  color: var(--on-thumb-active-color);
  border-radius: var(--ui-components-state-toggle-border-radius);
  cursor: grab;

  transition:
    left 0.1s ease-in-out,
    right 0.1s ease-in-out,
    width 0.2s ease-in-out;

  /* Remove focus styling from button - focus is shown on wrapper instead */
  &:focus-visible {
    outline: none;
    box-shadow: none;
    border-color: var(--thumb-enabled-border-color);
  }

  /* Prevent any visual changes on active/pressed state */
  &:active {
    cursor: grabbing;
  }
}

.dragging .button {
  transition: none;
}

.unchecked .button {
  left: 0;
  flex-direction: row-reverse;
}

.checked .button {
  right: 0.5px;
  flex-direction: row;
}


.button-icon {
  width: var(--ui-components-start-stop-switch-icon-size);
  height: var(--ui-components-start-stop-switch-icon-size);
}

.checked .button-icon {
  transform: rotate(180deg);
}

.button-label {
  padding: 0px var(--ui-components-start-stop-switch-label-spacing);
}

/* Disabled state - base (off) */
.wrapper.disabled .button-track {
  @mixin style style=indent noClick;
  background: var(--indent-disabled-background-color);
  border-color: var(--indent-disabled-border-color);
}

.wrapper.disabled .state {
  position: relative;
  width: 100%;
  height: 100%;
  align-items: center;
  left: auto;
  right: auto;
  @mixin font-body;
  color: var(--on-indent-disabled-color);
}

.wrapper.disabled .state.unchecked {
  display: flex;
  justify-content: center;
}

.wrapper.disabled .state.checked {
  display: none;
}

.wrapper.disabled.checked .state.checked,
.wrapper.disabled.value-on .state.checked,
.wrapper.disabled.value-loading .state.checked,
.wrapper.disabled.value-motor-on .state.checked {
  display: flex;
  justify-content: center;
}

.wrapper.disabled.checked .state.unchecked,
.wrapper.disabled.value-on .state.unchecked,
.wrapper.disabled.value-loading .state.unchecked,
.wrapper.disabled.value-motor-on .state.unchecked {
  display: none;
}

/* Disabled + On: gray filled background */
.wrapper.disabled.value-on .button-track {
  background: var(--selected-disabled-background-color);
  border-color: var(--selected-disabled-border-color);
}

.wrapper.disabled.value-on .state.checked {
  @mixin font-body-active;
  color: var(--on-selected-disabled-color);
}

/* Disabled + Motor-on: green filled background */
.wrapper.disabled.value-motor-on .button-track {
  background: var(--running-disabled-background-color);
  border-color: var(--running-disabled-border-color);
}

.wrapper.disabled.value-motor-on .state.checked {
  @mixin font-body-active;
  color: var(--on-running-disabled-color);
}

/* Disabled + Loading: gray filled background with neutral text */
.wrapper.disabled.value-loading .button-track {
  background: var(--selected-disabled-background-color);
  border-color: var(--selected-disabled-border-color);
}

.wrapper.disabled.value-loading .state.checked {
  @mixin font-body-active;
  color: var(--on-indent-neutral-color);
}

/* Alert frame */
.alert-frame {
  position: absolute;
  inset: -1px;
  z-index: 10;
  border: var(--global-size-and-spacing-border-weight-alertframe, 4px) solid var(--alert-alarm-color);
  border-radius: var(--app-components-alert-frame-border-radius-top-left, 6px)
    var(--app-components-alert-frame-border-radius-top-right, 6px)
    var(--app-components-alert-frame-border-radius-bottom-right, 6px)
    var(--app-components-alert-frame-border-radius-bottom-left, 6px);
  pointer-events: none;
}

/* Description */
.description {
  @mixin font-label;
  width: 100%;
  color: var(--element-neutral-color);
  padding-top: var(--ui-components-start-stop-switch-description-spacing);
  text-align: center;
}

.wrapper.disabled ~ .description {
  color: var(--element-disabled-color);
}

